[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/levels/Levels_main.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 29.7798, -48.5307, 0, 0, 0, 0, 456.877, -51.3369 )
}

[node name="Levels_main" type="Node2D"]
script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 29.7798, -48.5307 )
rotation = -0.00656977

[node name="virus" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="todda" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="boss_commings" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="fighter_timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="timeout" from="virus" to="." method="_on_virus_timeout"]
[connection signal="timeout" from="todda" to="." method="_on_todda_timeout"]
[connection signal="timeout" from="boss_commings" to="." method="_on_boss_commings_timeout"]
[connection signal="timeout" from="fighter_timer" to="." method="_on_fighter_timer_timeout"]
